2002-07-10  Chris Abbey  <jikes@cabbey.net>

	* 1.16 release.

2002-07-09  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (TypeAccessCheck): Perform type checks in all
	cases, including supertypes - bug 3054.
	* src/decl.cpp (ProcessTypeHeader, ProcessInterface): Remove
	duplicate error report.

2002-07-09  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ProcessAmbiguousName): Fix handling of byte.class
	and friends, bug 3053.

2002-07-09  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.h (VariableSymbol): Silence HP-UX aCC warning about
	trailing comma.

2002-07-08  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ProcessTypeHeader, ProcessTypeHeaders),
	(ProcessImportQualifiedName, ProcessSingleTypeImportDeclaration),
	(ProcessTypeImportOnDemandDeclaration, ImportType),
	(ProcessInterface, CheckNestedTypeDuplication): Improve detection
	of inaccessible supertypes and bad type importing - bugs 122, 412,
	2686, 2688, 2695.
	* src/error.h:
	* src/error.cpp (IMPORT_NOT_CANONICAL): Add new error.
	
2002-07-08  Eric Blake  <ebb9@email.byu.edu>

	* src/class.h (SetMax): New function.
	* src/bytecode.cpp (EmitStatement, DefineLabel): Improve dead
	branch handling in if statements - bug 2895.

2002-07-08  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (LoadVariable): Fix assertion in bug 3044.
	* src/decl.cpp (InitializeVariable): Improve variable
	initialization procedure.
	* src/expr.cpp (ProcessSimpleName, FindVariableMember): Improve
	final variable inlining.
	* src/getclass.cpp: Ditto.
	* src/symbol.cpp: Ditto.
	* src/init.cpp (ComputeFinalValue): Fix regression mentioned in
	bug 3044, introduced by patch 310.
	* src/semantic.h (ComputeFinalValue): Change method signature.
	* src/symbol.h (MarkInitialized, IsInitialized): Add flag for
	initialization value computed, to be orthogonal from declaration
	complete.

2002-07-07  Bu FeiMing  <mybird@online.sh.cn>

	* src/stream.cpp (getErrorMessage): duplication of "to make
	use of" in error message.
	