@@ -4,6 +4,13 @@
 
 2002-07-09  Eric Blake  <ebb9@email.byu.edu>
 
+	* src/definite.cpp (DefiniteAssignmentExpression),
+	(DefinitePLUSPLUSOrMINUSMINUS): Detect shadow variables better.
+	* src/expr.cpp (CreateAccessToScopedVariable): Avoid assertion
+	when illegally accessing non-final local - bug 3057.
+
+2002-07-09  Eric Blake  <ebb9@email.byu.edu>
+
 	* src/expr.cpp (TypeAccessCheck): Perform type checks in all
 	cases, including supertypes - bug 3054.
 	* src/decl.cpp (ProcessTypeHeader, ProcessInterface): Remove
